--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,48 @@
-# Кэшированные файлы Python
+# ——————————————————————
+# Python-специфичное
+# ——————————————————————
 __pycache__/
 *.py[cod]
+*.pyo
+*.pyd
+
+# ——————————————————————
+# Виртуальные окружения
+# ——————————————————————
+venv/
+.venv/
+env/
+ENV/
+
+# ——————————————————————
+# PyInstaller
+# ——————————————————————
+build/
+dist/
+*.spec
+
+# ——————————————————————
+# IDE и редакторы
+# ——————————————————————
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# ——————————————————————
+# Логи, временные файлы
+# ——————————————————————
+*.log
+*.tmp
+*.bak
+
+# ——————————————————————
+# Операционные системы
+# ——————————————————————
+.DS_Store
+Thumbs.db
+
+# ——————————————————————
+# Прочее
+# ——————————————————————
+*.swp
